# email-validate-extra

./: email-validate-extra.cabal
src/Text/Email/: Extra.hs
test/: Spec.hs
