cabal-version:        2.4

name:                 email-validate-extra
version:              0.0.0.0
license-file:         LICENSE
author:               typeable.io
build-type:           Simple

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions: QuasiQuotes
  build-depends:      base >=4.10 && <4.13
                    , bytestring
                    , email-validate
                    , pcre-heavy
                    , text
  exposed-modules:    Text.Email.Extra

