cabal-version:        2.4

name:                 email-validate-extra
version:              0.0.0.0
license-file:         LICENSE
author:               typeable.io
build-type:           Simple

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  build-depends:      base >=4.10 && <5.0
                    , bytestring
                    , email-validate
                    , text
                    , QuickCheck
  exposed-modules:    Text.Email.Extra

test-suite spec
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  default-language:   Haskell2010
  build-depends:      base >= 4.10 && < 5.0
                    , email-validate-extra
                    , hspec >= 2.2.0
  ghc-options: -Wall -O2